# NeuralQuantumState

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  errors.txt  fr_arr.npy  misc.ipynb  pre-commit-config.yaml  profile_stats.prof  pyproject.toml  sweep_config.yaml
analysis/: csv_2_table.ipynb  csv_2_table_dots.ipynb  fermion_dots_wandb.ipynb  nohup.out  plots_fermion_pol.py  plots_fermiondots.py  timings.ipynb  timings_dots.ipynb  timings_polarized.ipynb
analysis/wandb/: latest-run
data/: comparing_models.csv  playground.csv  vmc_playground.csv
docs/source/: conf.py  index.rst  models.rst  optimizers.rst  physics.rst  samplers.rst  state.rst
nqs/models/: __init__.py  base_wf.py  deepset.py  dummy.py  ffnn.py  rbm.py  vmc.py
nqs/optimizers/: adam.py  gd.py  optimizer.py  rmsprop.py  sr.py
nqs/physics/: ci.py  hamiltonians.py  hf.py
nqs/samplers/: metropolis.py  metropolis_hastings.py  sampler.py
nqs/simulation_scripts/: comparing_models.py  config.yaml  config_dots.yaml  config_dots_dsffn.yaml  config_dots_rbm.yaml  config_dots_vmc.yaml  config_polarized.yaml  config_polarized_dsffn.yaml  config_polarized_rbm.yaml  config_polarized_vmc.yaml  deepset_playground.py  dummy_playground.py  ffnn_playground.py  ffnn_sweep.py  gpu_sanity.py  nqs_experiment.py  nqs_experiment_dots.py  nqs_experiment_dots_sweep.py  nqs_experiment_pol.py  nqs_experiment_pol_sweep.py  nqs_timin_pol_dots copy.py  pre_training_playground.py  rbm_playground.py  vmc_playground.py
nqs/state/: nqs.py  (+1 more)
src/: __init__.py  cgan.ipynb  dcgan.ipynb  energies_batch.txt  grad_wf_batch.txt  grad_wf_nobatch.txt  grads_batch.txt  grads_nobatch.txt  laplacian_batch.txt  laplacian_nobatch.txt  positions_batch.txt  positions_nobatch.txt  profile_stats.prof  sanity.py
tests/: config_deepset.yaml  config_ds.yaml  config_ffnn.yaml  config_rbm.yaml  config_vmc.yaml  conftest.py  test_deepset.csv  test_ds.csv  test_ffnn.csv  test_gradients.py  test_models.py  test_performance.py  test_rbm.csv  test_samplers.py  test_symmetries.py  test_utils.py  test_vmc.csv
thesis_misc/: chapter_covers_plot.ipynb  crazy.py  crazystuff.ipynb  gans.ipynb  general_plots.py  ngvshessian.ipynb
(+202 files in other folders)
