[tool.poetry]
name = "ganqs"
version = "0.1.0"
description = "Thesis code"
authors = ["Daniel <danielhaas.lima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
matplotlib = "^3.7.2"
ipykernel = "^6.25.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
