[tool.poetry]
name = "nqs"
version = "0.1.0"
description = "Thesis code"
authors = ["Daniel <danielhaas.lima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
torch = "^2.0.1"
torchvision = "^0.15.2"
matplotlib = "^3.7.2"
ipykernel = "^6.25.1"
pre-commit = "^3.3.3"
jax = "^0.4.14"
jaxlib = "^0.4.14"
pandas = "^2.0.3"
tqdm = "^4.66.1"
pathos = "^0.3.1"
colorlog = "^6.7.0"
seaborn = "^0.12.2"
deepxde = "^1.9.2"
numpy = "1.25.2"
jupyter = "^1.0.0"
ipython = "^8.14.0"
pytest = "^7.4.2"
scikit-learn = "^1.3.1"
wandb = "^0.16.0"
isort = "^5.13.2"
tensorboard-plugin-profile = "^2.15.1"
line-profiler = "^4.1.2"
sphinx = "^7.2.6"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.0.0" # If using this theme
sphinx-autodoc-typehints = "^1.12.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "nqs",
]